--- a/26-9/src/main/resources/liquibase.properties
+++ b/26-9/src/main/resources/liquibase.properties
@@ -2,4 +2,4 @@ url=jdbc:mysql://localhost:3306/twenty_six
 username=root
 password=root
 driver=com.mysql.cj.jdbc.Driver
-changeLogFile=../db/changelog/changelog-master.xml
+#changeLogFile=../db/changelog/changelog-master.xml
