--- a/26-9/src/main/resources/application.properties
+++ b/26-9/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/twenty_six
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.liquibase.change-log=../db/changelog/changelog-master.xml
+spring.liquibase.change-log=src/main/resources/db/changelog/changelog-master.xml
