--- a/26-9/src/main/resources/application.properties
+++ b/26-9/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=26-9
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/twenty_six
+spring.datasource.url=jdbc:mysql://localhost:3306/twenty_nine
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
