--- a/26-9/src/main/resources/liquibase.properties
+++ b/26-9/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/twenty_six
+url=jdbc:mysql://localhost:3306/twenty_nine
 username=root
 password=root
 driver=com.mysql.cj.jdbc.Driver
